--- a/2FactorLogin/Views/Account/Login.cshtml
+++ b/2FactorLogin/Views/Account/Login.cshtml
@@ -1,17 +1,15 @@
 ﻿@using _2FactorLogin.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Anmelden";
+    ViewBag.Title = "Login";
 }
-
-<h2>@ViewBag.Title.</h2>
+<h1>Login</h1>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Lokales Konto für die Anmeldung verwenden.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,22 +36,17 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Anmelden" class="btn btn-default" />
+                        <input type="submit" value="Sign in" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Als neuer Benutzer registrieren", "Register")
+                    @Html.ActionLink("Register", "Register")
                 </p>
                 @* Diese Option aktivieren, nachdem Sie die Kontobestätigung für die Funktion zum Zurücksetzen des Kennworts aktiviert haben
                     <p>
                         @Html.ActionLink("Kennwort vergessen?", "ForgotPassword")
                     </p>*@
             }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
 </div>
