SSO - FrontEnd is finish

--- a/SingleSignOn/Views/Shared/_Layout.cshtml
+++ b/SingleSignOn/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-</head>
+
+    @*Single Sign On*@
+    <meta name="google-signin-client_id" content="84750132307-kef4b2ue8a9n3c04nmmlvpcksg273j3o.apps.googleusercontent.com"></head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -36,5 +38,28 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+
+    @*Single Sign On*@
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type="text/javascript">
+        function onSignIn(googleUser) {
+            var id_token = googleUser.getAuthResponse().id_token;
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId());
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail());
+            console.log('ID-TOKEN: ' + id_token);
+
+            var xhr = new XTMLHttpRequest();
+            xhr.open('POST', 'http://localhost:23388/Account/SSOTokenSignIn');
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.onload = function () {
+                console.log('Signed in as: ' + xhr.responseText);
+            };
+            xhr.send('idtoken=' + id_token);
+        }
+
+    </script>
 </body>
 </html>
