--- a/SingleSignOn/Views/Shared/_Layout.cshtml
+++ b/SingleSignOn/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                 </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <li><a href="#" onclick="signOut();">Sign out</a></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -51,13 +54,20 @@
             console.log('Email: ' + profile.getEmail());
             console.log('ID-TOKEN: ' + id_token);
 
-            var xhr = new XTMLHttpRequest();
+            var xhr = new XMLHttpRequest();
             xhr.open('POST', 'http://localhost:23388/Account/SSOTokenSignIn');
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onload = function () {
                 console.log('Signed in as: ' + xhr.responseText);
             };
             xhr.send('idtoken=' + id_token);
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log("User signed out.");
+            });
         }
 
     </script>
