Error in keydown event listner is fixed. Css files are added to UI project.

--- a/M183.UI/Views/Shared/_Layout.cshtml
+++ b/M183.UI/Views/Shared/_Layout.cshtml
@@ -1,8 +1,12 @@
 ﻿<!DOCTYPE html>
 
 <html>
-<head>
+<head class="no-js" lang="">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+
+    <link rel="stylesheet" href="~/Css/main.css" />
+    <link rel="stylesheet" href="~/Css/normalize.css" />
 
     <title>M183@(string.IsNullOrEmpty(ViewBag.Title) ? "" : " - " + ViewBag.Title)</title>
 </head>
