--- a/M183.UI/Views/Shared/_Layout.cshtml
+++ b/M183.UI/Views/Shared/_Layout.cshtml
@@ -5,16 +5,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="~/Css/main.css" />
-    <link rel="stylesheet" href="~/Css/normalize.css" />
+    <link rel="stylesheet" href="~/Css/Site.css" />
 
     <title>M183@(string.IsNullOrEmpty(ViewBag.Title) ? "" : " - " + ViewBag.Title)</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="navigation"></div>
-    <div class="body">@RenderBody()</div>
-    <div class="footer"></div>
+    <div class="header">
+        <h1>M183</h1>
+    </div>
+    <ul class="navigation">
+        @{
+            @Html.ActionMenuItem("Home", "Index", "Home")
+            @Html.ActionMenuItem("Key Logging", "Index", "KeyLogging")
+            @Html.ActionMenuItem("Credentials Logging", "Index", "CredentialsLogging")
+            @Html.ActionMenuItem("UI Redress", "Index", "UIRedress")
+        }
+    </ul>
+    <div class="content">@RenderBody()</div>
+    <div class="footer">
+        © 2017 Junhyeok Han, GIBZ
+    </div>
 
     <script src="~/Scripts/Site.js"></script>
 </body>
