Register and login work.

--- a/M183.UI/Views/Account/Login.cshtml
+++ b/M183.UI/Views/Account/Login.cshtml
@@ -1,16 +1,22 @@
-﻿@model AccountViewModel
+﻿@model UserViewModel
 
 @{
     ViewBag.Title = "Login";
 }
 
-@using (Html.BeginForm("Login", "Account", null, FormMethod.Post, null))
+@using (Html.BeginForm("Login", "Account", null, FormMethod.Post, new { @class = "pure-form pure-form-stacked" }))
 {
-    @Html.ValidationSummary()
-    
-    @Html.LabelFor(m => m.Username)
-    @Html.TextBoxFor(m => m.Username)
-    @Html.LabelFor(m => m.Password)
-    @Html.PasswordFor(m => m.Password)
-    <input type="submit" name="submit" value="Login" />
+    <span class="pure-form-message-inline">@Html.ValidationSummary()</span>
+
+    <div class="pure-control-group">
+        @Html.LabelFor(m => m.Email)
+        @Html.TextBoxFor(m => m.Email)
+    </div>
+    <div class="pure-control-group">
+        @Html.LabelFor(m => m.Password)
+        @Html.PasswordFor(m => m.Password)
+    </div>
+    <input class="pure-button pure-button-primary" type="submit" name="submit" value="Login" />
+    <a class="pure-button pure-button-primary" href="@Url.Action("Register", "Account", new { area = "" })">Register</a>
+    <a class="pure-button" href="@Url.Action("RecoverPassword", "Account", new { area = "" })">ForgotPassword</a>
 }
