--- a/M183.UI/Views/Home/Index.cshtml
+++ b/M183.UI/Views/Home/Index.cshtml
@@ -2,5 +2,7 @@
 
 <h1>Home</h1>
 <div class="block long">
-    This is a web application for module 183.
+    <p>This is a web application for module 183.</p>
+    @Html.ActionLink("Login", "Index", "Login", null, new { @class = "pure-button" })
+    @Html.ActionLink("Register", "Index", "Register", null, new { @class = "pure-button pure-button-primary" })
 </div>
