--- a/M183.UI/Views/Login/Index.cshtml
+++ b/M183.UI/Views/Login/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@model LoginViewModel
 
-@using (Html.BeginForm())
-{
-    @Html.TextBoxFor(m => m.Username)
-    @Html.PasswordFor(m => m.Password)
-    <input type="submit" name="submit" value="Login"/>
+@{ 
+    ViewBag.Title = "Login";
 }
+
+<h1>Login</h1>
+<div class="block long">
+    @using (Html.BeginForm("Index", "Login", null, FormMethod.Post, new { @class = "pure-form pure-form-stacked" }))
+    {
+        @Html.LabelFor(m => m.Username)
+        @Html.TextBoxFor(m => m.Username)
+        @Html.LabelFor(m => m.Password)
+        @Html.PasswordFor(m => m.Password)
+        <input class="pure-button pure-button-primary" type="submit" name="submit" value="Login" />
+    }
+</div>
