--- a/M183.UI/Views/Register/Index.cshtml
+++ b/M183.UI/Views/Register/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterViewModel
 
-@{ 
+@{
     ViewBag.Title = "Register";
 }
 
@@ -14,6 +14,8 @@
         @Html.PasswordFor(m => m.Password)
         @Html.LabelFor(m => m.MobileNumber)
         @Html.TextBoxFor(m => m.MobileNumber)
+        @Html.DropDownListFor(o => o.AuthenticationMethod, Enum.GetValues(typeof(AuthenticationMethod)).Cast<AuthenticationMethod>().Select(x => new SelectListItem { Text = x.ToString(), Value = ((int)x).ToString() }))
+
         <input class="pure-button pure-button-primary" type="submit" name="submit" value="Register" />
     }
 </div>
