--- a/M183.UI/Views/Shared/_Layout.cshtml
+++ b/M183.UI/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <ul>
             @Html.ActionMenuItem("Home", "Index", "Home")
 
-            @if (BusinessUser.Current.Id > 0)
+            @if (BusinessUser.Current.IsAuthenticated)
             {
                 @Html.ActionMenuItem("Logout", "Logout", "Login")
             }
