--- a/M183.UI/Areas/User/Views/Post/AddPost.cshtml
+++ b/M183.UI/Areas/User/Views/Post/AddPost.cshtml
@@ -20,6 +20,12 @@
 
         @Html.LabelFor(m => m.Content)
         @Html.TextBoxFor(m => m.Content)
+
+        @Html.LabelFor(m => m.IsPublished)
+        <div>
+            @Html.CheckBoxFor(m => m.IsPublished)
+        </div>
+
         <input class="pure-button pure-button-primary" type="submit" name="submit" value="Save" />
     }
 </div>
