Comments can be added to posts.

--- a/M183.UI/Contents/Styles/Site.css
+++ b/M183.UI/Contents/Styles/Site.css
@@ -89,6 +89,15 @@ body {
         width: calc(100% - 40px);
     }
 
+    .block .title .control {
+        float: right;
+    }
+
+    .block .title .control a {
+        font-weight: normal;
+        font-size: 50%;
+    }
+
 .title .control {
     float: right;
 }
