Database connections are disposed right after each method's execution.

--- a/M183.UI/Areas/User/Views/Dashboard/Index.cshtml
+++ b/M183.UI/Areas/User/Views/Dashboard/Index.cshtml
@@ -7,7 +7,7 @@
 <h1 class="title">
     User Dashboard
     <span class="control">
-        @Html.ActionLink("Create post", "AddPost", "Post", new { area = "user" }, new { @class = "pure-button pure-button-primary" })
+        @Html.ActionLink("Create post", "AddPost", "Post", new { area = "" }, new { @class = "pure-button pure-button-primary" })
     </span>
 </h1>
 
