--- a/M183.UI/Views/Shared/_Post.cshtml
+++ b/M183.UI/Views/Shared/_Post.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PostViewModel
 
-@using (Html.BeginForm("EditPost", "Post", new { area = "user" }, FormMethod.Post, new { @class = "pure-form pure-form-stacked" }))
+@using (Html.BeginForm("EditPost", "Post", new { area = "" }, FormMethod.Post, new { @class = "pure-form pure-form-stacked" }))
 {
     <div class="block long">
         <h2 class="title">
@@ -16,8 +16,8 @@
 
         @if (BusinessUser.Current.IsAuthorisedToPost(Model.Id))
         {
-            @Html.ActionLink("Edit", "EditPost", "Post", new { area = "user" }, new { @class = "pure-button pure-button-primary" })
-            @Html.ActionLink("Delete", "DeletePost", "Post", new { area = "user", postId = Model.Id }, new { @class = "pure-button pure-button-error" })
+            @Html.ActionLink("Edit", "EditPost", "Post", new { area = "" }, new { @class = "pure-button pure-button-primary space-right" })
+            @Html.ActionLink("Delete", "DeletePost", "Post", new { area = "", postId = Model.Id }, new { @class = "pure-button pure-button-error" })
         }
     </div>
 }
