--- a/M183.UI/Views/Shared/_Layout.cshtml
+++ b/M183.UI/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="~/Contents/Styles/Site.css" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" type="text/css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 
+    <script src="~/Contents/Scripts/jquery-3.2.1.min.js"></script>
+    <script src="~/Contents/Scripts/Site.js"></script>
+
     <title>M183 @(string.IsNullOrEmpty(ViewBag.Title) ? "" : " - " + ViewBag.Title)</title>
 </head>
 <body>
