Post can be edited.

--- a/M183.UI/Areas/User/Views/Dashboard/Index.cshtml
+++ b/M183.UI/Areas/User/Views/Dashboard/Index.cshtml
@@ -15,7 +15,7 @@
 {
     foreach (PostViewModel postViewModel in Model)
     {
-        Html.RenderPartial("~/Views/Shared/_Post.cshtml", postViewModel);
+        Html.RenderPartial("~/Views/Post/_Post.cshtml", postViewModel);
     }
 }
 else
