Ids are exposed as hash in URL.

--- a/M183.UI/Views/Post/EditPost.cshtml
+++ b/M183.UI/Views/Post/EditPost.cshtml
@@ -10,7 +10,7 @@
     {
         @Html.ValidationSummary()
 
-        @Html.HiddenFor(m => m.Id)
+        @Html.Hidden("Id", MD5Hash.HashId(Model.Id))
 
         @Html.LabelFor(m => m.Title)
         @Html.TextBoxFor(m => m.Title)
