Several bugs are fixed. (Adding comments, Getting post details)

--- a/M183.UI/Views/Post/PostDetail.cshtml
+++ b/M183.UI/Views/Post/PostDetail.cshtml
@@ -1,17 +1,17 @@
 ﻿@model PostViewModel
 
-    <h1 class="title">
-        Post
-        <span class="control">
-            <button class="back-button pure-button pure-button-primary">< Go Back</button>
-        </span>
-    </h1>
-@if (Model.Id > 0)
+<h1 class="title">
+    Post
+    <span class="control">
+        <button class="back-button pure-button pure-button-primary">< Go Back</button>
+    </span>
+</h1>
+@if (!string.IsNullOrEmpty(ViewBag.PostId))
 {
     using (Html.BeginForm("AddComment", "Post", new { area = "" }, FormMethod.Post, new { @class = "pure-form" }))
     {
         <div class="block long">
-            @Html.HiddenFor(m => m.Id)
+            <input type="hidden" name="Id" value="@ViewBag.PostId" />
             <h2>@Html.DisplayFor(m => m.Title) @(Model.DeletedOn != null ? "(Delete on " + Model.DeletedOn + ")" : "")</h2>
             <p>@Html.DisplayFor(m => m.Content)</p>
             <p>@Html.DisplayFor(m => m.Description)</p>
